[workspace]
members = ["plushie-ext", "plushie-renderer-lib", "plushie-renderer", "plushie-renderer-wasm"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plushie-ui/plushie-renderer"
authors = ["Daniel Hedlund <daniel@digitree.org>"]
keywords = ["gui", "desktop", "renderer", "native", "iced"]
categories = ["gui", "rendering"]

# Lint configuration. CI also passes RUSTFLAGS="-D warnings" (via justfile)
# which promotes ALL warnings to errors. The lints below catch things that
# should always be errors regardless of CI, and survive Rust toolchain
# upgrades (unlike the brittle #![deny(warnings)] crate attribute).
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
# CI promotes all warnings to errors via RUSTFLAGS="-D warnings" in the
# justfile. Specific clippy denials go here only when they should block
# local development too (not just CI).

# Release profile optimizations. Commented out because they increase
# compile times significantly (~3-5x). Uncomment for release/CI builds.
# These apply to both native and WASM targets.
#
# See docs/wasm-build.md for WASM-specific size measurements.
#
# [profile.release]
# lto = true           # cross-crate dead code elimination (~20-30% smaller)
# codegen-units = 1    # single codegen unit, better optimization opportunities
# opt-level = "z"      # optimize for size over speed (UI is GPU-bound, not CPU)
# strip = true         # remove symbol names from the binary

# Use local plushie-iced checkout for canvas widget changes (click-to-focus,
# focus lifecycle, widget ID, configurable role/active_descendant).
[patch.crates-io]
plushie-iced = { path = "../plushie-iced" }
plushie-iced-widget = { path = "../plushie-iced/widget" }
plushie-iced-core = { path = "../plushie-iced/core" }
plushie-iced-runtime = { path = "../plushie-iced/runtime" }
plushie-iced-winit = { path = "../plushie-iced/winit" }
plushie-iced-renderer = { path = "../plushie-iced/renderer" }
plushie-iced-graphics = { path = "../plushie-iced/graphics" }
plushie-iced-wgpu = { path = "../plushie-iced/wgpu" }
plushie-iced-tiny-skia = { path = "../plushie-iced/tiny_skia" }
plushie-iced-futures = { path = "../plushie-iced/futures" }
plushie-iced-highlighter = { path = "../plushie-iced/highlighter" }
